--- a/docs/style.css
+++ b/docs/style.css
@@ -14,8 +14,9 @@ body {
 
 .center {
     text-align: center;
-    margin: auto;
-    width: 60%;
+    margin-top: 15vh;
+    margin-left: 10%;
+    width: 80%;
     padding: 10px;
 }
 
@@ -71,18 +72,21 @@ body {
 .cards {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 40px;
+    gap: 5%;
     padding: 0 30px 50px;
 }
 
-.cards .cards-inner {
+.cards-inner {
     display: flex;
     background-color: #fafcfd;
     padding: 20px;
     border-radius: 5px;
     transition: box-shadow 0.4s;
     flex-direction: column;
-    min-width: 200px;
+    max-height: 500px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
     
 .cards .cards-inner:hover {
@@ -102,15 +106,15 @@ main h1 {
 
 @media (min-width: 912px) {
 .cards {
-    grid-template-columns: repeat(1, 0.4fr);
+    grid-template-columns: repeat(3, 0.4fr);
     justify-content: center;
     justify-items: center;
 }
 }
 
-@media (min-width: 1200px) {
+@media (max-width: 100%) {
 .container {
-    max-width: 1100px;
+    min-width: 80%;
     margin: auto;
 }
 }
